<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true">


<ImageView
android:id="@+id/logoImageView"
android:layout_width="300dp"
android:layout_height="150dp"
android:src="@drawable/ic_cookpal_logo"
android:contentDescription="@string/app_logo"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginTop="30dp" />


<TextView
android:id="@+id/emailLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/email_label"
android:textColor="@android:color/white"
android:textSize="16sp"
app:layout_constraintTop_toBottomOf="@id/logoImageView"
app:layout_constraintStart_toStartOf="parent"
android:layout_marginStart="40dp"
android:layout_marginTop="40dp"/>


<EditText
android:id="@+id/emailEditText"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:hint="Email"
android:background="@drawable/rounded_edittext_bg"
android:padding="12dp"
android:textColor="@android:color/black"
android:textColorHint="@android:color/darker_gray"
app:layout_constraintTop_toBottomOf="@id/emailLabel"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginStart="40dp"
android:layout_marginEnd="40dp"
android:layout_marginTop="4dp"/>


<TextView
android:id="@+id/passwordLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/password_label"
android:textColor="@android:color/white"
android:textSize="16sp"
app:layout_constraintTop_toBottomOf="@id/emailEditText"
app:layout_constraintStart_toStartOf="parent"
android:layout_marginStart="40dp"
android:layout_marginTop="20dp"/>


<EditText
android:id="@+id/passwordEditText"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:hint="Password"
android:inputType="textPassword"
android:background="@drawable/rounded_edittext_bg"
android:padding="12dp"
android:textColor="@android:color/black"
android:textColorHint="@android:color/darker_gray"
app:layout_constraintTop_toBottomOf="@id/passwordLabel"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginStart="40dp"
android:layout_marginEnd="40dp"
android:layout_marginTop="4dp"/>


    <ImageView
        android:id="@+id/togglePasswordIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/toggle_password"
        android:focusable="true"
        android:src="@drawable/ic_eye_closed"
        app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/forgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:focusable="true"
        android:text="Forgot Password?"
        android:textColor="#FFC107"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        tools:ignore="TouchTargetSizeCheck" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="328dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"

        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/golden_yellow"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <LinearLayout
        android:id="@+id/registerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/noAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don’t have an account?"
            android:textColor="@android:color/white"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Register!"
            android:textColor="#FFC107"
            android:textSize="17sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
